--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,13 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+			margin: 0;
+			padding: 0;
+	}
+.stripe {
+  			width: 100%;
+  			height: 10px;
+  			background: #8e44ad;
+  background: linear-gradient(to right, #8e44ad 0%, #8e44ad 20%, #e74c3c 20%, #e74c3c 40%, #f39c12 40%, #f39c12 60%, #27ae60 60%, #27ae60 80%, #2980b9 80%, #2980b9 100%); 
 }
-
-a {
-  color: #00B7FF;
+	h1{
+			color: white;
 }
